fixed spacing in table

--- a/awards.css
+++ b/awards.css
@@ -51,7 +51,14 @@ table  {
     margin-left: auto;
     margin-right: auto;
 }
-th {
+caption {
     border: 1px solid white;
+    background-color: darkred;
+}
+
+.Add_to_cart
+{
+
+
 
 }
